# Stellar-Basic-DAO

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  jest.config.js  package.json  turbo.json
.github/workflows/: backend.yml  cd.yml  ci.yml  contract-deploy.yml  contract.yml  frontend-ci.yml  root-tests.yml  smoke-tests.yml
BackendAcademy/: .env.example  CONTRIBUTING.md  TYPEORM_MIGRATION_GUIDE.md  app.module.ts  package-lock.json  package.json  readme.md
BackendAcademy/src/: api-info.controller.ts  app.module.ts  app.service.ts  main.ts
app/backend/: .env.example  CONTRIBUTING.md  README.md  SETUP_GUIDE.md  SMOKE_TESTS.md  package.json  (+1 more)
app/contract/contracts/Folder/: BUILD_AND_TEST.md  CROSS_ASSET_SUPPORT.md  Cargo.toml  REGRESSION_TESTS.md  build.rs
app/contract/contracts/Folder/docs/: AUTHORIZATION_GUARDS.md
app/contract/contracts/Folder/src/: admin.rs  assert_helpers.rs  batch.rs  bench_test.rs  commitment.rs  commitment_test.rs  coverage_test.rs  dispute.rs  errors.rs  escrow.rs  escrow_id.rs  escrow_id_test.rs  events.rs  fee.rs  fee_router.rs  fee_router_test.rs  fee_test.rs  fuzz_test.rs  governance.rs  governance_test.rs  guard_test.rs  hook.rs  lib.rs  metadata.rs  metadata_test.rs  nonce.rs  nonce_test.rs  privacy.rs  role_test.rs  stealth.rs  stealth_test.rs  storage.rs  storage_test.rs  test.rs  test_context.rs  types.rs  upgrade_test.rs
docs/: ARCHITECTURE.md  BACKEND.md  FRONTEND.md  GOVERNANCE.md  INVARIANTS.md  MVP-CONTRACT-SCOPE.md  MVP-ROADMAP.md  SMART-CONTRACTS.md
src/: server.ts
(+221 files in other folders)
